# promptpilot

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  ruff.toml  streamlit_app.py
brain/: __init__.py  embedder.py  memory.py
modules/: smart_answer.py
promptpilot/: __init__.py  app.py  config.py  signatures.py
promptpilot/modules/: __init__.py  smart_answer.py
src/promptpilot/: cli.py  config.py  signatures.py
src/promptpilot/components/: smart_answer_agent.py
tests/: test_smart_answer.py  test_smart_answer_agent.py
